--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,4 +1,38 @@
-html,body{
+html,
+body {
   width: 100%;
   height: 100%;
+}
+
+#asideLeft,
+#asideRight {
+  width: 300px;
+  height: 100%;
+  background-color: red;
+}
+
+
+/* 浮动 */
+.clearfix:after,
+.clearfix:before {
+  /*伪元素是行内元素 正常浏览器清除浮动方法*/
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.clearfix {
+  *zoom: 1;
+  /*ie6清除浮动的方式 *号只有IE6-IE7执行，其他浏览器不执行*/
+}
+
+.fr {
+  float: right;
+}
+
+.fl {
+  float: left;
 }
