--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -2,18 +2,24 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #asideLeft,
 #asideRight {
   width: 300px;
   height: 100%;
-  background-color: red;
 }
 
 #main {
-  width: calc(100% - 600px);
+  width: 100%;
   margin: 0 auto;
+}
+
+.card{
+  width: 140px;
+  height: 120px;
+  border: 1px solid red;
 }
 
 /* 侧边栏动画 */
